tests/diagnostic_golden_cc/free_parse_continuation.diag
error[CF2004]: missing required identifier
  --> tests/diagnostic_golden_cc/free_parse_continuation.f90:3:3
   = stage: parser
   = help: see docs/errors.md#CF2004
  |
3 |   )
  |   ^
   = note: The parser reached a position where an identifier is required to continue the declaration or statement.
   = help: Check trailing commas and continuation lines near this position.
